fix: word wrapping in facet text

--- a/web/themes/custom/cloudy/src/components/_form.scss
+++ b/web/themes/custom/cloudy/src/components/_form.scss
@@ -491,6 +491,7 @@ span.next-link .fas {
   }
 
   label {
+    display: table;
     font-weight: normal;
     margin: 0;
   }
@@ -613,7 +614,9 @@ span.next-link .fas {
     border-radius: 0.2rem;
     margin-left: auto;
     margin-right: 0;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    transition:
+      color 0.15s ease-in-out,
+      background-color 0.15s ease-in-out,
       border-color 0.15s ease-in-out;
     cursor: pointer;
   }
